# advanced-house-price-predictor

./: PATH_SETUP_GUIDE.md
app/: README.md  __init__.py  data_injestion.py  kaggle.json  main.py  new.ipynb  pipeline.py  pyproject.toml
app/.ipynb_checkpoints/: new-checkpoint.ipynb
app/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
app/eda/: bivariate_analysis.py  multivariate_analysis.py  univariate_analysis.py
app/feature_engineering/: feature_encoder.py  feature_extraction.py  feature_scaler.py  feature_transformation.py  outlier_hander.py
app/preprocessor/: imputer.py  main.py  missing_value_analysis.py
app/utils/: core.py  meta.py  mixins.py
